# COMPASS

./: LICENSE  README.md  env.yaml  pyproject.toml
compass/: __init__.py
compass/cli/: run_diag.py
compass/colormaps/: 0-3Hr_Radar-Based_Categorical.cmap.npy  0-3Hr_Radar-Based_Probabilities.cmap.npy  1,_3_Hr_Precip_Accumulation.cmap.npy  10_km_Radar_Coded_Message.cmap.npy  16_Level_Composite_Reflectivity.cmap.npy  16_Level_Reflectivity.cmap.npy  16_Level_Velocity.cmap.npy  256_Level_Reflectivity.cmap.npy  256_Level_Velocity.cmap.npy  37ghz-trmm1.cmap.npy  37ghz-trmm2.cmap.npy  37ghz-trmm3.cmap.npy  50C.cmap.npy  85h-ssmi.cmap.npy  8_Level_Reflectivity.cmap.npy  8_Level_Velocity.cmap.npy  8_lvl_Vel.cmap.npy  Accent.cmap.npy  BV_Change1.cmap.npy  BV_Change2.cmap.npy  Blue.cmap.npy  Blue_Red_Green.cmap.npy  Blue_White_Red.cmap.npy  Blues.cmap.npy  BrBG.cmap.npy  BuGn.cmap.npy  BuPu.cmap.npy  CA_(Low_Light_Vis).cmap.npy  CIRA_IR_Default.cmap.npy  CTSTM_Best_Category.cmap.npy  CWB_Z_-_Reflectivity.cmap.npy  Cloud.cmap.npy  Clutter_Filter_Control.cmap.npy  Combined_Shear.cmap.npy  DHR.cmap.npy  Dark2.cmap.npy  Delta.cmap.npy  Digital_VIL.cmap.npy  Discrepancy.cmap.npy  Frontogenesis.cmap.npy  (+293 more)
compass/colormaps/csv/: 0-3Hr_Radar-Based_Categorical.cmap.csv  0-3Hr_Radar-Based_Probabilities.cmap.csv  1,_3_Hr_Precip_Accumulation.cmap.csv  10_km_Radar_Coded_Message.cmap.csv  16_Level_Velocity.cmap.csv  (+327 more)
compass/core/: calc.py  colormap_loader.py  config.py  io.py  utils.py
compass/diagnostics/: model_init_analysis.py  model_init_analysis_WORKS_NEED_CLEANUP.py  satellite_plot.py
