[project]
name = "conmpass"
version = "0.1.0"
description = "Climate diagnostics package for CESM model and field campaign observations"
authors = [{name = "Justin Richling", email = "richling@ucar.edu"}]
dependencies = [
    "xarray",
    "dask",
    "matplotlib",
    "cartopy",
    "numpy",
    "pandas",
    "scipy",
    "cf_xarray",
    "xesmf",
    "xskillscore",
    "satpy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
climdiag = "cli.run_diag:main"