[project]
name = "compass"
version = "0.1.0"
description = "Climate diagnostics package for CESM model and field campaign observations"
authors = [{name = "Justin Richling", email = "richling@ucar.edu"}]
dependencies = [
    "xarray",
    "dask",
    "matplotlib>=3.5.0",
    "cartopy",
    "numpy",
    "pandas",
    "scipy",
    "cf_xarray",
    "xesmf",
    "xskillscore",
    "satpy>=0.55.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
compass = "compass.cli.run_diag:main"

[tool.setuptools.packages.find]
include = ["compass*"]
exclude = ["notebooks*"]
